ext {
    // SPRING_VERSION
    COMMONS_MATH_VER = '3.6.1'
    COMMONS_COLL_VER = '4.4'

    LOMBOK_VER = '1.18.16'

// logging
    SLF4J_VER = '1.7.30'
    LOGBACK_VER = '1.2.3'

// test
    TEST_JUNIT_VER = '5.7.0'
    TEST_MOCKITO_VER = '3.6.28'
    TEST_ASSERTJ_VER = '3.18.1'
}


// project dependencies
buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
}

apply plugin: 'java'
apply plugin: 'application'


java {
//    toolchain {
//        languageVersion = JavaLanguageVersion.of(13)
//    }
    sourceCompatibility = JavaVersion.VERSION_15
    targetCompatibility = JavaVersion.VERSION_15
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    compileOnly "org.projectlombok:lombok:${LOMBOK_VER}"
    annotationProcessor "org.projectlombok:lombok:${LOMBOK_VER}"

    testCompileOnly "org.projectlombok:lombok:${LOMBOK_VER}"
    testAnnotationProcessor "org.projectlombok:lombok:${LOMBOK_VER}"

    implementation group: 'org.apache.commons', name: 'commons-math3', version: COMMONS_MATH_VER
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: COMMONS_COLL_VER

    // Logging
    implementation group: 'org.slf4j', name: 'slf4j-api', version: SLF4J_VER
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: LOGBACK_VER

    // testing
    testImplementation platform("org.junit:junit-bom:${TEST_JUNIT_VER}")
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation "org.mockito:mockito-core:${TEST_MOCKITO_VER}"
    testImplementation "org.assertj:assertj-core:${TEST_ASSERTJ_VER}"
}

test {
    useJUnitPlatform()
    reports {
        junitXml.enabled = true
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

// enable PREVIEW features
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
